# ia32-translator

./: CMakeLists.txt  Makefile  README.md
include/: arquivoHandler.hpp  preProcessador.hpp  tradutor.hpp  utils.hpp
src/: arquivoHandler.cpp  lib.asm  main.cpp  preProcessador.cpp  tradutor.cpp  utils.cpp
test/: test.asm  test_soma_2.asm  utilsTest.cpp
